--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,110 @@
 body {
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-    background: linear-gradient(to bottom, #e68a12 0%, #527c96 100%);
-    color: #333;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    padding: auto;
-  }
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  background: linear-gradient(to bottom, #e68a12 0%, #527c96 100%);
+  color: #333;
+  display: flex;
+  justify-content: center;
+  padding: auto;
+  overflow-y: auto;
+}
 
-  .main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-  }
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
 
+.container {
+  width: 50rem;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  text-align: center;
+  width: 70%;
+  overflow-y: auto;
+}
+
+.title {
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.question-selector {
+  margin: 20px 0;
+}
+
+.col {
+  margin: 10px 0;
+  text-align: left;
+}
+
+.box {
+  margin: 10px 0;
+  text-align: left;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.box input {
+  margin: 0;
+}
+
+.btn {
+  margin-top: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background: #e68a12;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background: #f4a53f;
+}
+
+.box.correct {
+  background-color: #d4edda;
+  border-color: #28a745;
+}
+
+.box.wrong {
+  background-color: #f8d7da;
+  border-color: #dc3545;
+}
+
+.wrong-question {
+  background-color: #f1f0f0;
+  border: 1px solid gray;
+  width: 50%;
+  justify-self: center;
+  padding: 10px, 20px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.wrong-question ul {
+  text-align: left;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
   .container {
-    width: 50rem;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    padding: 20px;
-    text-align: center;
-    width: 70%;
+    width: 30%;
   }
-
-  .title {
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
-
-  .question-selector {
-    margin: 20px 0;
-  }
-
-  .col {
-    margin: 10px 0;
-    text-align: left;
-  }
-
-  .box {
-    margin: 10px 0;
-    text-align: left;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    transition: all 0.3s ease-in-out;
-  }
-
-  .box input {
-    margin: 0;
-  }
-
-  .btn {
-    margin-top: 15px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    background: #e68a12;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: 0.3s;
-  }
-
-  .btn:hover {
-    background: #f4a53f;
-  }
-
-  .box.correct {
-    background-color: #d4edda;
-    border-color: #28a745;
-  }
-
-  .box.wrong {
-    background-color: #f8d7da;
-    border-color: #dc3545;
-  }
-
-  @media (min-width: 1024px) and (max-width: 1440px) {
-    .container {
-        width: 30%; 
-    }
 }
